--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <!-- Facebook Meta Tags -->
   <meta property="og:url" content="https://thiagononaka.com.br/">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Thiago Nonaka">
+  <meta property="og:title" content="Churrasco do Paraíba">
   <meta property="og:description" content=" Consultoria Esportiva Online com acompanhamento completo para alcançar seus objetivos. Eu ajudo você a
     manter o foco
     e realizar suas metas.">
@@ -29,7 +29,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta property="twitter:domain" content="https://thiagononaka.com.br/">
   <meta property="twitter:url" content="https://thiagononaka.com.br/">
-  <meta name="twitter:title" content="Thiago Nonaka">
+  <meta name="twitter:title" content="Churrasco do Paraíba">
   <meta name="twitter:description" content=" Consultoria Esportiva Online com acompanhamento completo para alcançar seus objetivos. Eu ajudo você a
     manter o foco
     e realizar suas metas.">
@@ -326,9 +326,9 @@
         </div>
 
         <div class="s-about__image" data-aos="fade-down">
-          <img src="img/paraiba.webp" alt="Thiago Nonaka" loading="lazy">
-          <!-- <img src="img/tag-agua.svg" class="tag-agua" alt="Thiago Nonaka" width="120px" loading="lazy">
-          <img src="img/tag-kcal.svg" class="tag-kcal" alt="Thiago Nonaka" width="110px" loading="lazy"> -->
+          <img src="img/paraiba.webp" alt="Churrasco do Paraíba" loading="lazy">
+          <!-- <img src="img/tag-agua.svg" class="tag-agua" alt="Churrasco do Paraíba" width="120px" loading="lazy">
+          <img src="img/tag-kcal.svg" class="tag-kcal" alt="Churrasco do Paraíba" width="110px" loading="lazy"> -->
 
         </div>
       </div>
