--- a/index.html
+++ b/index.html
@@ -20,9 +20,8 @@
   <meta property="og:url" content="https://thiagononaka.com.br/">
   <meta property="og:type" content="website">
   <meta property="og:title" content="Churrasco do Paraíba">
-  <meta property="og:description" content=" Consultoria Esportiva Online com acompanhamento completo para alcançar seus objetivos. Eu ajudo você a
-    manter o foco
-    e realizar suas metas.">
+  <meta property="og:description"
+    content="Churrasco domiciliar e eventos com serviço completo para tornar seus momentos ainda mais especiais. Eu ajudo você a criar experiências inesquecíveis e garantir a satisfação dos seus convidados..">
   <meta property="og:image" content="./img/icon-192x192.png">
 
   <!-- Twitter Meta Tags -->
@@ -30,9 +29,8 @@
   <meta property="twitter:domain" content="https://thiagononaka.com.br/">
   <meta property="twitter:url" content="https://thiagononaka.com.br/">
   <meta name="twitter:title" content="Churrasco do Paraíba">
-  <meta name="twitter:description" content=" Consultoria Esportiva Online com acompanhamento completo para alcançar seus objetivos. Eu ajudo você a
-    manter o foco
-    e realizar suas metas.">
+  <meta name="twitter:description"
+    content="Churrasco domiciliar e eventos com serviço completo para tornar seus momentos ainda mais especiais. Eu ajudo você a criar experiências inesquecíveis e garantir a satisfação dos seus convidados.">
   <meta name="twitter:image" content="./img/icon-192x192.png">
 
 
@@ -392,28 +390,6 @@
 
 
       </div>
-
-      <!-- <div class="container">
-        <div class="orcamento">
-          <h2>Bora conversar</h2>
-          <p>Nosso objetivo é oferecer programas personalizados para maximizar sua performance, promover o emagrecimento
-            saudável, estimular o ganho de massa muscular e melhorar o seu bem-estar. Conte conosco para atingir seus
-            objetivos de forma eficiente e transformar sua qualidade de vida.</p>
-
-          <a aria-label="link"
-            href="https://api.whatsapp.com/send?l=pt_BR&amp;phone=5511984191246&amp;text=Ol%C3%A1%2C%20encontrei%20seu%20site%20e%20gostaria%20de%20conversar%20sobre%20a%20consultoria"
-            class="btn btn-primary btn-budget">Começar a mudança
-            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrow-narrow-right" width="34"
-              height="34" viewBox="0 0 24 24" stroke-width="1" stroke="currentColor" fill="none" stroke-linecap="round"
-              stroke-linejoin="round">
-              <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-              <path d="M5 12l14 0" />
-              <path d="M15 16l4 -4" />
-              <path d="M15 8l4 4" />
-            </svg></a>
-        </div>
-      </div> -->
-
 
     </div>
   </section>
