--- a/index.html
+++ b/index.html
@@ -371,14 +371,18 @@
           <ul>
             <li><img loading="lazy" src="img/check.svg" width="20" height="22px" alt="check" />Carnes
             </li>
-            <li><img loading="lazy" src="img/check.svg" width="20" height="22px" alt="check" />Churrasqueiro
+            <li><img loading="lazy" src="img/check.svg" width="20" height="22px" alt="check" />Queijo coalho
             </li>
             <li><img loading="lazy" src="img/check.svg" width="20" height="22px" alt="check" />Temperos
             </li>
-            <li><img loading="lazy" src="img/check.svg" width="20" height="22px" alt="check" />Churrasco vegano
+            <li><img loading="lazy" src="img/check.svg" width="20" height="22px" alt="check" />Pão de alho
             </li>
-            <li><img loading="lazy" src="img/check.svg" width="20" height="22px" alt="check" />Suplementação /
-              Manipulados / Recursos</li>
+            <li><img loading="lazy" src="img/check.svg" width="20" height="22px" alt="check" />Linguiça
+            </li>
+            <li><img loading="lazy" src="img/check.svg" width="20" height="22px" alt="check" />Frango
+            </li>
+            <li><img loading="lazy" src="img/check.svg" width="20" height="22px" alt="check" />Vegetais
+            </li>
 
           </ul>
 
