feat: real photos

--- a/index.html
+++ b/index.html
@@ -62,7 +62,6 @@
               d="M12 10.941c2.333 -3.308 .167 -7.823 -1 -8.941c0 3.395 -2.235 5.299 -3.667 6.706c-1.43 1.408 -2.333 3.621 -2.333 5.588c0 3.704 3.134 6.706 7 6.706s7 -3.002 7 -6.706c0 -1.712 -1.232 -4.403 -2.333 -5.588c-2.084 3.353 -3.257 3.353 -4.667 2.235" />
           </svg>
 
-
           Churrasco do paraíba
         </h3>
       </a>
@@ -228,9 +227,12 @@
         </div>
 
         <div class="s-hero__image" data-aos="fade-down" data-aos-duration="1000">
-          <img src="img/hero.jpg" alt="Paraíba">
+          <img src="img/hero-paraiba.webp" alt="Paraíba">
           <img src="img/selo.svg" class="selo" alt="selo" width="100px">
-
+          <!-- <img src="img/mini-churras.png" class="mini-churras" alt="selo" width=""> -->
+          <div class="mini-churras-container">
+            <img src="img/mini-churras.png" class="mini-churras" alt="selo">
+          </div>
         </div>
       </div>
       <!-- <ul class="infos d-flex between">
@@ -470,7 +472,7 @@
 
   <section class="s-contact" id="contato">
     <span class="subtitle">Contato</span>
-    <h2 class="title-section text-dark">Fale conosco</h2>
+    <h2 class="title-section text-dark holtwood-one-sc-regular">Fale conosco</h2>
     <p class="text-center">
       Estamos ansiosos para atendê-los.</p>
 
