--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
           <h3>Whatsapp</h3>
           <p>Conversar agora</p>
 
-          <a href="https://api.whatsapp.com/send?l=pt_BR&amp;phone=5511984191246&amp;text=Ol%C3%A1%2C%20encontrei%20seu%20site%20e%20gostaria%20de%20conversar%20sobre%20a%20consultoria."
+          <a href="https://api.whatsapp.com/send?l=pt_BR&amp;phone=5511984191246&amp;text=Ol%C3%A1%2C%20encontrei%20seu%20site%20e%20gostaria%20de%20conversar%20sobre%20seus%serviços."
             class="btn-contact">
             <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrow-right" width="20"
               height="20" viewBox="0 0 24 24" stroke-width="1.5" stroke="#2c3e50" fill="none" stroke-linecap="round"
@@ -600,7 +600,7 @@
               </span>
 
               <a
-                href="https://api.whatsapp.com/send?l=pt_BR&amp;phone=5511984191246&amp;text=Ol%C3%A1%2C%20encontrei%20seu%20site%20e%20gostaria%20de%20conversar%20sobre%20a%20consultoria.">Enviar
+                href="https://api.whatsapp.com/send?l=pt_BR&amp;phone=5511984191246&amp;text=Ol%C3%A1%2C%20encontrei%20seu%20site%20e%20gostaria%20de%20conversar%20sobre%20seus%serviços.">Enviar
                 WhatsApp</a>
 
             </li>
@@ -658,7 +658,7 @@
   </footer>
 
   <div class="btn-whats" id="whatsAppBtn" style="display: block;">
-    <a href="https://api.whatsapp.com/send?l=pt_BR&amp;phone=5511984191246&amp;text=Ol%C3%A1%2C%20encontrei%20seu%20site%20e%20gostaria%20de%20conversar%20sobre%20a%20consultoria."
+    <a href="https://api.whatsapp.com/send?l=pt_BR&amp;phone=5511984191246&amp;text=Ol%C3%A1%2C%20encontrei%20seu%20site%20e%20gostaria%20de%20conversar%20sobre%20seus%serviços."
       target="_blank" aria-label="instagram da backlgrs"><svg xmlns="http://www.w3.org/2000/svg"
         class="icon-tabler icon-tabler-brand-whatsapp" width="24" height="24" viewBox="0 0 24 24" stroke-width="1.5"
         stroke="#000" fill="none" stroke-linecap="round" stroke-linejoin="round">
