fix: text service

--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
       <div class="box-container d-flex">
         <div class="box" style="border: none; background-color: transparent;">
           <h2 class="s-service-title color-light">Como funciona o <br> <span
-              class="holtwood-one-sc-regular text-churrasco">Churrasco
+              class="holtwood-one-sc-regular text-churrasco">Churrasco <br>
               do
               paraíba</span> </h2>
           <p class="color-light">Ofereço um serviço completo para o seu churrasco, levando até você as melhores carnes e
